--- a/src/index.html
+++ b/src/index.html
@@ -97,7 +97,7 @@
                 <div class="search-bar">
                     <form action="">
                         <span></span>
-                        <input type="text" name='keyword' placeholder="防晒">
+                        <input type="text"  placeholder="防晒">
                         <input type="submit" value="搜索">
                     </form>
                 </div>
@@ -128,7 +128,86 @@
             </div>
         </div>
     </div>
+
+    <nav>
+        <div class="container">
+            <div class="all-goods">
+                <div class="title">
+                    <h3><a href="javascript:;">所有商品分类</a></h3>
+                    <i></i>
+                </div>
+
+            </div>
+            <ul class="menu">
+                <li><a href="javascript:;" class="active">首页</a></li>
+                <li><a href="javascript:;">TV直播</a></li>
+                <li><a href="javascript:;">跨境频道</a></li>
+            </ul>
+        </div>
+    </nav>
+
+    <div id="banner">
+        <div class="container">
+            <div class="top-live">
+                <div class="left">
+                    <div class="firlive">
+                        <i class="live-banner"></i>
+                        <div class="live-goods">
+                            <div class="live-special">
+                                <img src="./imgs/live1.jpg" alt="">
+                            </div>
+                            <a href="javascript:;" class="mask"></a>
+                            <span class="goods-title">
+                                <p><a href="javascript:;">泰禾元九华山九蒸九晒地藏黄精</a></p>
+                                <p class="goods-price">
+                                    ￥&nbsp;
+                                    <em>598.00</em>
+                                </p>
+                                <a href="javascript:;" class="goto-live">看直播</a>
+                            </span>
+
+                        </div>
+                    </div>
+                    <div class="seclive">
+                        <i class="live-banner"></i>
+                        <div class="live-goods">
+                            <div class="live-special">
+                                <img src="./imgs/live2.jpg" alt="">
+                            </div>
+                            <span class="goods-title">
+                                <p><a href="javascript:;">存正福音场效应治疗仪前列腺型</a></p>
+                                <p class="goods-price">
+                                    ￥&nbsp;
+                                    <em>1881.00</em>
+                                </p>
+                            </span>
+
+                        </div>
+                    </div>
+                </div>
+                <div class="right">
+                    <img src="https://pic.cnrmall.com/image/cc/70/cc7083dc9e331fd2d297cbed5142fe91.gif" alt="">
+                </div>
+            </div>
+        </div>
+        <div class="wrap">
+           <div class="container">
+            <div class="right">
+                <h2>今日最大牌</h2>
+                <div class="con">
+                    <a href="javascript:;">
+                        <img src="./imgs/huayin.jpg" alt="">
+                    </a>
+                    <h3>花印官方旗舰店</h3>
+                    <p>引领美妆新时尚，“花的印迹”      展现不一样的美</p>
+                </div>
+            </div>
+           </div>
+        </div>
+        
+    </div>
     <script src="./script/jquery-3.4.1.min.js"></script>
     <script src="./script/index.js"></script>
+   
 </body>
 </html>
