静态页面完成

--- a/src/connhead.html
+++ b/src/connhead.html
@@ -21,7 +21,7 @@
             <div class="right">
                 <dl class="login">
                     <dt>
-                        <a href="login.html">您好, 请登录</a>
+                        <a href="login.html">您好, &nbsp;请登录</a>
                         <a href="register.html">免费注册</a>
                     </dt>
                 </dl>
