--- a/src/detail.html
+++ b/src/detail.html
@@ -20,8 +20,14 @@
         <div class="container">
             <div class="gods-pic">
                 <a href="javascript:;" class="smallimg">
-                    <img src="https://pic3.cnrmall.com/image/2c/04/2c04e19bddf0f5a8d5b9e7f3ed96e72a.jpg@360w_360h" alt="">
+                    <div class="smallshade">
+
+                    </div>
+                    <img src="./imgs/list.jpg" alt="">
                 </a>
+                <div class="bigshade">
+                    
+                </div>
                 <div class="controll">
 
                 </div>
@@ -72,9 +78,113 @@
                         </dd>
                     </dl>
                 </div>
+                <div class="address">
+                    <dl>
+                        <dt>物流</dt>
+                        <dd>
+                            <span>配送至</span>
+                            <div class="chosearea">
+                                <div class="text">
+                                    <p>配送至杭州市上城区</p>
+                                    <b></b>
+                                </div>
+                            </div>
+                            <div class="prompt">
+                                <strong>有货</strong>
+                                <span>免运费</span>
+                            </div>
+                        </dd>
+                    </dl>
+                </div>
+                <div class="services">
+                    <dl>
+                        <dt>服务</dt>
+                        <dd>
+                            非自营&nbsp;由&nbsp;&nbsp;
+                            <a href="javascript:;">爱克斯食品专营店&nbsp;&nbsp;</a>
+                            发货，并提供售后服务。
+                    </dd>
+                    </dl>
+                </div>
+                <div class="key">
+                    <div class="num-wrap">
+                        <dl>
+                            <dt>数量</dt>
+                            <dd>
+                                <div class="num">
+                                    <span class="reduce tognum">
+                                        <i class="fa"></i>
+                                    </span>
+                                    <input type="text" value="1">
+                                    <span class="add tognum">
+                                        <i class="fa"></i>
+                                    </span>
+                                    <span class="unit">箱</span>
+                                </div>
+                                <div class="inventory">
+                                    （库存
+                                    <span>295</span>
+                                    箱)
+                                </div>
+                            </dd>
+                        </dl>
+                    </div>
+                </div>
+                <div class="buy">
+                    <div class="btn">
+                        <a href="javascript:;" class="buybtn">立刻购买</a>
+                        <a href="javascript:;" class="addbtn">
+                            <i class="fa"></i>
+                            加入购物车</a>
+                    </div>
+                </div>
+                <div class="tip">
+                    <dl>
+                        <dt>温馨提示</dt>
+                        <dd>
+                            <p style="color:#999">国家药监局提示您：如您购买化妆品类商品，请正确认识化妆品功效，化妆品不能替代药品，不能治疗皮肤病等疾病</p>
+                        </dd>
+                    </dl>
+                </div>
             </div>
             <div class="gods-change">
-
+                <div class="tit">
+                    <h4>橱窗推荐</h4>
+                    <a href="javascript:;">
+                        <i class="fa"></i>换一批</a>
+                </div>
+                <ul>
+                    <li>
+                        <a href="javascript:;">
+                            <div class="imgwrap">
+                                <img src="./imgs/cti.png" alt="">
+                            </div>
+                            <div class="price">
+                               <span>￥</span><em>118.00</em>
+                            </div>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="javascript:;">
+                            <div class="imgwrap">
+                                <img src="./imgs/cti.png" alt="">
+                            </div>
+                            <div class="price">
+                               <span>￥</span><em>118.00</em>
+                            </div>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="javascript:;">
+                            <div class="imgwrap">
+                                <img src="./imgs/cti.png" alt="">
+                            </div>
+                            <div class="price">
+                               <span>￥</span><em>118.00</em>
+                            </div>
+                        </a>
+                    </li>
+                </ul>
             </div>
             
         </div>
