--- a/src/shoppingcar.html
+++ b/src/shoppingcar.html
@@ -76,7 +76,7 @@
                 <div class="line"></div>
                 
                 <div class="buy-list">
-                   <div class="things">
+                    <div class="things">
                         <input type="checkbox">
                          <div class="thing-img">
                              <img src="./imgs/list.jpg" alt="">
@@ -119,7 +119,51 @@
                                  <i class="fa"></i>
                              </a>
                          </div>
-                   </div>
+                    </div>
+                    <div class="things">
+                    <input type="checkbox">
+                     <div class="thing-img">
+                         <img src="./imgs/list.jpg" alt="">
+                     </div>
+                     <div class="thing-main">
+                         <p class="name">
+                            华为畅享10高清智能手机 货号127531
+                         </p>
+                         <div class="singles">
+                            <div class="numtog">
+                                <a href="jvascript:;" class="reduce">
+                                    <i class="fa"></i>
+                                </a>
+                                <input type="text" value="1">
+                                <a href="javascript:;" class="add">
+                                    <i class="fa"></i>
+                                </a>
+                            </div>
+                            <div class="thing-price">
+                                ￥<span>1399.00</span>
+                            </div>
+                            <div class="thing-rebate">
+                                限时折扣
+                            </div>
+                            <div class="thing-amount">
+                                <div class="money">
+                                    ￥<span>565.00</span>
+                                </div>
+                                <div class="save">
+                                    共省 ￥<span>29.00</span>
+                                </div>
+                            </div>
+                        </div>
+                     </div>
+                     <div class="thing-remove">
+                         <a href="javascript:;" class="collect">
+                             <i class="fa"></i>
+                         </a>
+                         <a href="javascript:;" class="addcar">
+                             <i class="fa"></i>
+                         </a>
+                     </div>
+                    </div>
                 </div>
 
                 <div class="buy-foot">
