--- a/src/connhead.html
+++ b/src/connhead.html
@@ -21,8 +21,14 @@
             <div class="right">
                 <dl class="login">
                     <dt>
-                        <a href="login.html">您好, &nbsp;请登录</a>
-                        <a href="register.html">免费注册</a>
+                        <div class="unuse">
+                            <a href="login.html">您好, &nbsp;请登录</a>
+                            <a href="register.html">免费注册</a>
+                        </div>
+                        <div class="use">
+                            <span class="username">13666429656</span>
+                            <sub title="会员等级">暂无会员等级</sub>
+                        </div>
                     </dt>
                 </dl>
                 <dl class="myorder">
