--- a/src/list.html
+++ b/src/list.html
@@ -9,6 +9,7 @@
 <body>
     <div id="head"></div>
     <div id="wrap"></div>
+    <div id="toolbar"></div>
     <div id="sort-bar">
         <div class="container">
             <div class="array">
