--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,8 @@
     <div id="wrap">
 
     </div>
+
+    <div id="toolbar"></div>
     <div id="banner">
         <div class="container">
             <div class="top-live">
@@ -106,7 +108,7 @@
                 <div class="list-wrap">
                     <div class="list">
                         <ul>
-                            <li>
+                            <!-- <li>
                                 <div class="goods">
                                     <a href="javascript:;">
                                         <img src="./imgs/list.jpg" >
@@ -118,98 +120,8 @@
                                     <span class="newprice">￥785.00</span>
                                     <span class="oldprice">￥1428.00</span>
                                 </p>
-                            </li>
-                            <li>
-                                <div class="goods">
-                                    <a href="javascript:;">
-                                        <img src="./imgs/list.jpg" >
-                                        <p class="sk-name">食善大豆精纯卵磷脂颗粒无残留去油天然非转基因调脂护肝清血管</p>
-                                    </a>
-                                    <span class="sk-shadow"></span>
-                                </div>
-                                <p class="price">
-                                    <span class="newprice">￥785.00</span>
-                                    <span class="oldprice">￥1428.00</span>
-                                </p>
-                            </li>
-                            <li>
-                                <div class="goods">
-                                    <a href="javascript:;">
-                                        <img src="./imgs/list.jpg" >
-                                        <p class="sk-name">食善大豆精纯卵磷脂颗粒无残留去油天然非转基因调脂护肝清血管</p>
-                                    </a>
-                                    <span class="sk-shadow"></span>
-                                </div>
-                                <p class="price">
-                                    <span class="newprice">￥785.00</span>
-                                    <span class="oldprice">￥1428.00</span>
-                                </p>
-                            </li>
-                            <li>
-                                <div class="goods">
-                                    <a href="javascript:;">
-                                        <img src="./imgs/list.jpg" >
-                                        <p class="sk-name">食善大豆精纯卵磷脂颗粒无残留去油天然非转基因调脂护肝清血管</p>
-                                    </a>
-                                    <span class="sk-shadow"></span>
-                                </div>
-                                <p class="price">
-                                    <span class="newprice">￥785.00</span>
-                                    <span class="oldprice">￥1428.00</span>
-                                </p>
-                            </li>
-                            <li>
-                                <div class="goods">
-                                    <a href="javascript:;">
-                                        <img src="./imgs/list.jpg" >
-                                        <p class="sk-name">食善大豆精纯卵磷脂颗粒无残留去油天然非转基因调脂护肝清血管</p>
-                                    </a>
-                                    <span class="sk-shadow"></span>
-                                </div>
-                                <p class="price">
-                                    <span class="newprice">￥785.00</span>
-                                    <span class="oldprice">￥1428.00</span>
-                                </p>
-                            </li>
-                            <li>
-                                <div class="goods">
-                                    <a href="javascript:;">
-                                        <img src="./imgs/list.jpg" >
-                                        <p class="sk-name">食善大豆精纯卵磷脂颗粒无残留去油天然非转基因调脂护肝清血管</p>
-                                    </a>
-                                    <span class="sk-shadow"></span>
-                                </div>
-                                <p class="price">
-                                    <span class="newprice">￥785.00</span>
-                                    <span class="oldprice">￥1428.00</span>
-                                </p>
-                            </li>
-                            <li>
-                                <div class="goods">
-                                    <a href="javascript:;">
-                                        <img src="./imgs/list.jpg" >
-                                        <p class="sk-name">食善大豆精纯卵磷脂颗粒无残留去油天然非转基因调脂护肝清血管</p>
-                                    </a>
-                                    <span class="sk-shadow"></span>
-                                </div>
-                                <p class="price">
-                                    <span class="newprice">￥785.00</span>
-                                    <span class="oldprice">￥1428.00</span>
-                                </p>
-                            </li>
-                            <li>
-                                <div class="goods">
-                                    <a href="javascript:;">
-                                        <img src="./imgs/list.jpg" >
-                                        <p class="sk-name">食善大豆精纯卵磷脂颗粒无残留去油天然非转基因调脂护肝清血管</p>
-                                    </a>
-                                    <span class="sk-shadow"></span>
-                                </div>
-                                <p class="price">
-                                    <span class="newprice">￥785.00</span>
-                                    <span class="oldprice">￥1428.00</span>
-                                </p>
-                            </li>
+                            </li> -->
+                          
                         </ul>
                     </div>
                     <div class="prev slider"> < </div>
@@ -452,7 +364,9 @@
             </div>
         </div>
     </div>
-    <script src="./script/jquery-3.4.1.min.js"></script>
+    <script src="https://cdn.bootcdn.net/ajax/libs/jquery/1.12.4/jquery.js"></script>
+    <script src="https://cdn.bootcdn.net/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.js"></script>
+    <script src="https://cdn.bootcdn.net/ajax/libs/jquery.lazyload/1.9.1/jquery.lazyload.js"></script>
     <script src="./script/index.js"></script>
    
 </body>
