--- a/src/login.html
+++ b/src/login.html
@@ -37,6 +37,7 @@
                             <div class="user">
                                 <label for=""></label>
                                 <input type="text" placeholder="手机号/会员名/邮箱">
+                                <div class="error">用户名不存在</div>
                             </div>
                             <div class="password">
                                 <label for=""></label>
@@ -93,7 +94,8 @@
             </div>
         </div>
     </div>
-    <script src="./script/jquery-3.4.1.min.js"></script>
+    <script src="https://cdn.bootcdn.net/ajax/libs/jquery/1.12.4/jquery.js"></script>
+    <script src="https://cdn.bootcdn.net/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.js"></script>
     <script src="./script/login.js"></script>
 </body>
 </html>
