--- a/src/index.html
+++ b/src/index.html
@@ -347,8 +347,11 @@
             <div class="relateditem">
                 <ul>
                     <li>
-                        <a href="javascript:;">
-                            <img src="./imgs/list.jpg">
+                        <!-- <a href="javascript:;">
+                            <div class="imgwrap">
+                                <img src="./imgs/list.jpg">
+                            </div>
+                            
                             <div class="item-info">
                                 <p class="info-name">3M强效除霾除菌除甲醛净化器3M强效
                                 </p>
@@ -356,7 +359,7 @@
                                    <span>￥</span><span class="price">1499.00</span> 
                                 </p>
                             </div>
-                        </a>
+                        </a> -->
 
                     </li>
                    
