--- a/src/register.html
+++ b/src/register.html
@@ -130,6 +130,6 @@
         </div>
     </div>
     <script src="./script/jquery-3.4.1.min.js"></script>
-    <script src="./script/reister.js"></script>
+    <script src="./script/register.js"></script>
 </body>
 </html>
