--- a/src/connhead.html
+++ b/src/connhead.html
@@ -20,7 +20,8 @@
                             <a href="register.html">免费注册</a>
                         </div>
                         <div class="use">
-                            <span class="username">13666429656</span>
+                            <a href="javascript:;" class="exit">退出登录</a>
+                            <span class="username"></span>
                             <sub title="会员等级">暂无会员等级</sub>
                         </div>
                     </dt>
@@ -88,3 +89,5 @@
             </div>
         </div>
     </header>
+    <script src="https://cdn.bootcdn.net/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script src="https://cdn.bootcdn.net/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.js"></script>
