--- a/src/list.html
+++ b/src/list.html
@@ -196,6 +196,7 @@
     </div>
 
     <script src="https://cdn.bootcdn.net/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script src="https://cdn.bootcdn.net/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.js"></script>
     <script src="https://cdn.bootcdn.net/ajax/libs/jquery.lazyload/1.9.1/jquery.lazyload.min.js"></script>
     <script src="./script/jquery.pagination.js"></script>
     <script src="./script/list.js"></script>
