--- a/src/toolbar.html
+++ b/src/toolbar.html
@@ -62,7 +62,7 @@
                                 </div>
                                 <div class="info">
                                     <div class="name">
-                                        <a href="javascript:;">13666429656</a>
+                                        <a href="javascript:;"></a>
                                     </div>
                                     <div class="vip">
                                         <a href="javascript:;">
