--- a/src/shoppingcar.html
+++ b/src/shoppingcar.html
@@ -87,7 +87,7 @@
                              </p>
                              <div class="singles">
                                 <div class="numtog">
-                                    <a href="jvascript:;" class="reduce">
+                                    <a href="jvascript:;" class="reduce ban">
                                         <i class="fa"></i>
                                     </a>
                                     <input type="text" value="1">
@@ -96,7 +96,7 @@
                                     </a>
                                 </div>
                                 <div class="thing-price">
-                                    ￥<span>1399.00</span>
+                                    ￥<span>9999.99</span>
                                 </div>
                                 <div class="thing-rebate">
                                     限时折扣
@@ -115,7 +115,7 @@
                              <a href="javascript:;" class="collect">
                                  <i class="fa"></i>
                              </a>
-                             <a href="javascript:;" class="addcar">
+                             <a href="javascript:;" class="addcar removeself">
                                  <i class="fa"></i>
                              </a>
                          </div>
@@ -147,6 +147,8 @@
         </div>
     </div>
     <script src="https://cdn.bootcdn.net/ajax/libs/jquery/1.12.4/jquery.js"></script>
+    
+    <script src="https://cdn.bootcdn.net/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.js"></script>
     <script src="./script/shoppingcar.js"></script>
 </body>
 </html>
