--- a/src/conn.html
+++ b/src/conn.html
@@ -43,7 +43,7 @@
                 <div class="title">
                     <i class="icon"></i>
                     <i class="count"></i>
-                    <a href="javascript:;">我的购物车</a>
+                    <a href="shoppingcar.html">我的购物车</a>
                 </div>
             </div>
         </div>
@@ -411,10 +411,11 @@
     <script>
        !function(){
         const $count=$('.mycart .count')
-        if($.cookie('username')){
+        let username=$.cookie('username')
+        if(username){
             $count.css({display:'block'});
-            if(localStorage.getItem('goodsid')){
-                $count.html(localStorage.getItem('goodsid').split(',').length);
+            if(localStorage.getItem(username+'goodsid')){
+                $count.html(localStorage.getItem(username+'goodsid').split(',').length);
             }else{
                 $count.html('0');
             }
