--- a/src/detail.html
+++ b/src/detail.html
@@ -120,7 +120,7 @@
                             <dt>数量</dt>
                             <dd>
                                 <div class="num">
-                                    <span class="reduce tognum">
+                                    <span class="reduce tognum disable">
                                         <i class="fa"></i>
                                     </span>
                                     <input type="text" value="1" id='count'>
