完成大部分

--- a/src/connhead.html
+++ b/src/connhead.html
@@ -77,7 +77,7 @@
                     </dt>
                     <dd class="con">
                         <span class="QRcode">
-                            <img src="https://pic.cnrmall.com/qr/app/url.gif" alt="">
+                            <img src="./imgs/url.gif" alt="">
                             <p>
                                 扫描二维码
                                 <br>
