--- a/src/index.html
+++ b/src/index.html
@@ -64,8 +64,23 @@
         </div>
         <div class="wrap">
            <div class="container">
-                <div class="left">
-
+                <div class="left"> 
+                    <div class="prev"><</div>
+                    <div class="next">></div>
+                    <ul>
+                        <li class="active"><img src="https://imgcps.jd.com/ling/12623639/6Im65pyv55WF6ZSA5aW95Lmm/5q-P5ruhMTAw5YePNTA/p-5bd8253082acdd181d02fa28/d20603b2.jpg" alt=""></li>
+                        <li><img src="https://img14.360buyimg.com/pop/s1180x940_jfs/t1/140745/23/256/40200/5ededc2fEbbc26f60/e09bacfce2aba15e.jpg.webp" alt=""></li>
+                        <li><img src="https://img14.360buyimg.com/pop/s1180x940_jfs/t1/127714/1/3235/49069/5ece71d0Ed3f14744/b8611e174f4f3b70.jpg.webp" alt=""></li>
+                        <li><img src="https://img20.360buyimg.com/pop/s1180x940_jfs/t1/112194/40/8858/75328/5ed4cfdaEa2809655/86f4d6868be9b371.jpg.webp" alt=""></li>
+                        <li><img src="https://imgcps.jd.com/ling/100008348542/5omL5py66LSt5a6e5oOg/5aSH6LSn6LaF5YC8/p-5bd8253082acdd181d02f9d0/261cdc00/590x470.jpg" alt=""></li>
+                    </ul>
+                    <ol>
+                        <li class="focus"></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                    </ol>
                 </div>
                 <div class="right">
                     <h2>今日最大牌</h2>
@@ -141,7 +156,7 @@
                 <div class="left">
                     <div class="cover">
                         <a href="javascript:;">
-                            <img src="https://pic.cnrmall.com/image/bd/5a/bd5a6cf84f4eba9ee29276cc978e99da.jpg">
+                            <img src="./imgs/food1.jpg">
                         </a>
                     </div>
                     <div class="some">
@@ -150,46 +165,46 @@
                         <a href="javascript:;">
                             <p class="sometit">精选蜂蜜</p>
                             <p class="somecon">纯纯蜜香 其味浓浓</p>
-                            <img src="https://pic.cnrmall.com/image/89/25/89252c0122369ab10ab204f61301f5b5.jpg" alt="精选蜂蜜">
+                            <img src="./imgs/food2.jpg" alt="精选蜂蜜">
                         </a>
                         <a href="javascript:;">
                             <p class="sometit">冲调粉茶</p>
                             <p class="somecon">浓缩精华</p>
-                            <img src="https://pic.cnrmall.com/image/cd/0e/cd0e2e92839cd2e0b5ac5651a73ffe4a.jpg" alt="冲调粉茶">
+                            <img src="./imgs/food3.jpg" alt="冲调粉茶">
                         </a>
                         <a href="javascript:;">
                             <p class="sometit">粮油副食</p>
                             <p class="somecon">营品杂粮 营养丰富</p>
-                            <img src="https://pic.cnrmall.com/image/c1/d9/c1d97212ed18baf8b6be13bbcfce956a.jpg" alt="粮油副食">
+                            <img src="./imgs/food4.jpg" alt="粮油副食">
                         </a>
                         <a href="javascript:;">
                             <p class="sometit">即食罐头</p>
                             <p class="somecon">美味即享</p>
-                            <img src="https://pic.cnrmall.com/image/aa/40/aa4027cfc852b2e258afd67433fb1feb.jpg" alt="精选蜂蜜">
+                            <img src="./imgs/food5.jpg" alt="精选蜂蜜">
                         </a>
                     </div>
                     <div class="more">
                         <a href="javascript:;">
-                            <img src="https://pic.cnrmall.com/image/f5/62/f5622abedf64175fdb99bc50a380e2f8.jpg" >
+                            <img src="./imgs/food10.jpg" >
                         </a>
                         <a href="javascript:;">
-                            <img src="https://pic.cnrmall.com/image/0c/6a/0c6a25bc3e00d9e28db90273b47835fd.jpg" >
+                            <img src="./imgs/food11.jpg" >
                         </a>
                         <a href="javascript:;" class="last">
-                            <img src="https://pic.cnrmall.com/image/4e/31/4e31206b8326e0954a5c14e230e4b936.jpg" >
+                            <img src="./imgs/food12.jpg" >
                         </a>
                     </div>
                 </div>
                 <div class="right">
                     <div class="cover">
                         <a href="javascript:;">
-                            <img src="https://pic.cnrmall.com/image/42/1d/421d8db99b0e65faff97b3739a97abb9.jpg">
+                            <img src="./imgs/food6.jpg">
                         </a>
                        
                     </div>
                     <div class="cover">
                         <a href="javascript:;">
-                            <img src="https://pic.cnrmall.com/image/70/94/7094d59e5f9cd7133ede8aeda9620989.jpg">
+                            <img src="./imgs/food7.jpg">
                         </a>
                        
                     </div>
@@ -199,23 +214,23 @@
                         <a href="javascript:;">
                             <p class="sometit">休闲小食</p>
                             <p class="somecon">老少皆宜</p>
-                            <img src="https://pic.cnrmall.com/image/8e/a1/8ea1ebcae314b255d6dd7f4f10a54829.jpg" alt="休闲小食">
+                            <img src="./imgs/food8.jpg" alt="休闲小食">
                         </a>
                         <a href="javascript:;">
                             <p class="sometit">肉禽蛋品</p>
                             <p class="somecon">味美鲜香</p>
-                            <img src="https://pic.cnrmall.com/image/57/0f/570f0b4c21d8a892c3a5a03dac72d3aa.jpg" alt="肉禽蛋品">
+                            <img src="./imgs/food9.jpg" alt="肉禽蛋品">
                         </a>
                     </div>
                     <div class="more">
                         <a href="javascript:;">
-                            <img src="https://pic.cnrmall.com/image/ed/eb/edeb91813654f321606d3ff7390b3415.jpg" >
+                            <img src="./imgs/food13.jpg" >
                         </a>
                         <a href="javascript:;">
-                            <img src="https://pic.cnrmall.com/image/3e/ca/3ecaa2be4ed5cbdcae96d99646f56421.jpg" >
+                            <img src="./imgs/food15.jpg" >
                         </a>
                         <a href="javascript:;" class="last">
-                            <img src="https://pic.cnrmall.com/image/b6/41/b6410b6009b87ecfbabaa35311695775.jpg" >
+                            <img src="./imgs/food14.jpg" >
                         </a>
                     </div>
                 </div>
