--- a/src/shoppingcar.html
+++ b/src/shoppingcar.html
@@ -127,7 +127,7 @@
                     <div class="action">
                         <input type="checkbox" class="checkall">全选
 
-                        <a href="javascript" class="delete">删除</a>
+                        <a href="javascript:;" class="delete">删除</a>
                     </div>
                     <div class="summary">
                         <dl>
