--- a/src/login.html
+++ b/src/login.html
@@ -2,15 +2,18 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <meta name="keywords" content="央广小品 - 央广购物，电视购物，央广，网上购物，视频购物，视频直播，TV购物，QVC，美国QVC">
+    <meta name="description" content="央广小品 - （cnrmall.com）-是由中央人民广播电台和美国QVC联合打造的居家购物公司，获国家广电总局批准的电视购物频道，24小时客服热线:4008-518-518">
+
+    <title>央广购物官方网站-具品牌美誉度的电视购物商城</title>
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/login.css">
 </head>
 <body>
     <header>
         <div class="container">
-            <img src="./imgs/tit.png" alt="">
+            <a href="index.html"><img src="./imgs/tit.png" alt=""></a>
             <span>欢迎登录</span>
         </div>
     </header>
