--- a/src/detail.html
+++ b/src/detail.html
@@ -165,7 +165,7 @@
                     <li>
                         <a href="javascript:;">
                             <div class="imgwrap">
-                                <img src="./imgs/cti.png" alt="">
+                                <img src="./imgs/food4.jpg" alt="">
                             </div>
                             <div class="price">
                                <span>￥</span><em>118.00</em>
@@ -175,7 +175,7 @@
                     <li>
                         <a href="javascript:;">
                             <div class="imgwrap">
-                                <img src="./imgs/cti.png" alt="">
+                                <img src="./imgs/food3.jpg" alt="">
                             </div>
                             <div class="price">
                                <span>￥</span><em>118.00</em>
@@ -185,7 +185,7 @@
                     <li>
                         <a href="javascript:;">
                             <div class="imgwrap">
-                                <img src="./imgs/cti.png" alt="">
+                                <img src="./imgs/food8.jpg" alt="">
                             </div>
                             <div class="price">
                                <span>￥</span><em>118.00</em>
