--- a/src/detail.html
+++ b/src/detail.html
@@ -3,7 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="keywords" content="央广小品 - 央广购物，电视购物，央广，网上购物，视频购物，视频直播，TV购物，QVC，美国QVC">
+    <meta name="description" content="央广小品 - （cnrmall.com）-是由中央人民广播电台和美国QVC联合打造的居家购物公司，获国家广电总局批准的电视购物频道，24小时客服热线:4008-518-518">
+    <meta name="description" content="央广购物（cnrmall.com）-是由中央人民广播电台和美国QVC联合打造的居家购物公司，获国家广电总局批准，是目前全国最具公信力和品牌美誉度的电视购物频道，24小时客服热线:4008-518-518">
+    <title>央广购物</title>
     <link rel="stylesheet" href="./css/detail.css">
     <link rel="stylesheet" href="https://statics.cnrmall.com/web/static/toolkit/font-awesome/css/font-awesome.min.css">
 </head>
