--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="keywords" content="央广小品 - 央广购物，电视购物，央广，网上购物，视频购物，视频直播，TV购物，QVC，美国QVC">
+    <meta name="description" content="央广小品 - （cnrmall.com）-是由中央人民广播电台和美国QVC联合打造的居家购物公司，获国家广电总局批准的电视购物频道，24小时客服热线:4008-518-518">
+    <meta name="description" content="央广购物（cnrmall.com）-是由中央人民广播电台和美国QVC联合打造的居家购物公司，获国家广电总局批准，是目前全国最具公信力和品牌美誉度的电视购物频道，24小时客服热线:4008-518-518">
+    <title>央广购物官方网站-具品牌美誉度的电视购物商城</title>
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/index.css">
     <link rel="stylesheet" href="https://statics.cnrmall.com/web/static/toolkit/font-awesome/css/font-awesome.min.css">
@@ -382,6 +385,10 @@
             </div>
         </div>
     </div>
+
+    <footer>
+        <img src="./imgs/foot.png" alt="">
+    </footer>
     <script src="https://cdn.bootcdn.net/ajax/libs/jquery/1.12.4/jquery.js"></script>
     <script src="https://cdn.bootcdn.net/ajax/libs/jquery.lazyload/1.9.1/jquery.lazyload.min.js"></script>
     <script src="https://cdn.bootcdn.net/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.js"></script>
