--- a/src/register.html
+++ b/src/register.html
@@ -88,6 +88,7 @@
                                             <input type="password">
                                             <label for="" class="error"></label>
                                         </dd>
+                                        <span class="grade"></span>
                                     </dl>
                                     <dl class="repassword">
                                         <dt>确认密码:</dt>
